Just clean code